route-rules/3-egress-gateway-with-mtls-for-foosvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway-server-default
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 8888 # port used by server
      name: server-default-8888
      protocol: TLS # Mark as TLS as we are passing mTLS through.
    hosts:
    - server.default.svc.cluster.global
    tls:
      mode: PASSTHROUGH
