route-rules/7-ingress-gateway-with-mtls-for-foosvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway-server-ns2
spec:
  selector:
    istio: ingressgateway
  servers:
    # Union of all ports exposed by this cluster
  - port:
      number: 80
      name: server-ns2-80
      protocol: TLS
    hosts:
    - server.ns2.svc.cluster.global
    tls:
      mode: PASSTHROUGH
