route-rules/1-service-entry-for-sidecar-to-egress-for-foosvc.yaml
# One service entry for each exposed service from remote clusters
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: service-entry-server-ns2
spec:
  hosts:
  - server.ns2.svc.cluster.global
  # For TCP services, we need to assign each service a unique IP
  # so that Pilot can setup Envoy listeners for each service
  # Needs some custom DNS stuff to allocate IPs out of the
  # loopback range. Right now, coreDNS returns 1.1.1.1
  #addresses:
  #- 127.255.172.172
  ports:
  - number: 80
    name: http
    protocol: HTTP
  location: MESH_EXTERNAL
  resolution: DNS
  endpoints:
    # This is our cluster-local egress gateway
  - address: istio-egressgateway.istio-system.svc.cluster.local
    ports:
      http: 80 #equivalent to targetPort in k8s
