route-rules/1-service-entry-for-sidecar-to-ingress-for-foosvc.yaml
# One service entry for each exposed service from remote clusters
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: service-entry-server-ns2
spec:
  hosts:
  - server.ns2.svc.cluster.global
  # For TCP services, we need to assign each service a unique IP
  # so that Pilot can setup Envoy listeners for each service
  addresses:
  - 127.255.172.172
  ports:
  - number: 80
    name: http
    protocol: HTTP
  location: MESH_EXTERNAL
  resolution: DNS
  endpoints:
   # Address of the ingress gateway of the remote clusters
  - address: __REPLACEME__
    ports:
      http: 443
