route-rules/4-virtual-service-for-egress-to-ingress-for-foosvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: egressgateway-to-ingressgateway-server-default
spec:
  hosts:
  - server.default.svc.cluster.global
  gateways:
  - istio-egressgateway
  tls:
  - match:
    - port: 8888
      sniHosts:
      - server.default.svc.cluster.global
    route:
    - destination:
        host: __REPLACEME__
        port: 8888
