route-rules/5-service-entry-for-egress-to-ingress-with-all-remote-ports.yaml
# One service entry for each ingress gateway from remote clusters
# We need a way to make sure Pilot does not create listeners for these entries.
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: service-entry-ingress-gateway-cluster2
spec:
  hosts:
  - cluster2-ingress-gateway.service.entry
  addresses:
    # add a dummy IP to ensure that listeners generated by Pilot
    # dont collide with listeners for other services
  - 127.8.8.8  
  ports:
    # The union of all ports exposed by services in that cluster
  - number: 80
    name: tcp
    protocol: TCP
  location: MESH_EXTERNAL  
  resolution: DNS
  endpoints:
    # Address of ingress gateway of cluster 2
  - address: __REPLACEME__
    ports:
      tcp: 80
