route-rules/8-virtual-service-for-ingress-to-foosvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingressgateway-to-server-ns2
spec:
  hosts:
  - server.ns2.svc.cluster.global
  gateways:
  - istio-ingressgateway-server-ns2
  tls:
  - match:
    - port: 80
      sniHosts:
      - server.ns2.svc.cluster.global
    route:
    - destination:
        host: server.default.svc.cluster.local
        subset: notls
        port:
          number: 80
