route-rules/cluster1-service-entry.yaml
# One service entry for each cluster to bridge
# the endpoint.address should be the ingress gateway adress of the cluster.
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-service-cluster1
spec:
  hosts:
  - "*.cluster1.global"
  ports:
  - number: 80
    name: http
    protocol: HTTP
  discovery: DNS
  endpoints:
    # address of ingressgateway of this cluster
  - address: __REPLACEME__
    ports:
      http: 80
