route-rules/cluster2-inbound-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inbound-traffic-via-ingressgateway
spec:
  hosts:
  - "*.cluster2.global"
  gateways:
  - istio-ingressgateway
  http:
      # For traffic arriving at ingress gateway in cluster 2, route to
      # internal service customize this based on the local cluster.
    - match:
      - gateways:
        - istio-ingressgateway
      route:
      - destination:
          host: server.default.svc.cluster.local
          port:
            name: http
        weight: 100
