route-rules/cluster2-service-entry.yaml
# One service entry for each cluster to bridge
# the endpoint.address should be the ingress gateway adress of the cluster.
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-service-cluster2
spec:
  hosts:
  - "*.cluster2.global"
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  endpoints:
    # address of ingress gateway of this cluster
  - address: __REPLACEME__
    ports:
      http: 80
