route-rules/common-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: route-via-egressgateway
spec:
  hosts:
  - "*.global"
  gateways:
  - istio-egressgateway
  - mesh
  http:
    # traffic from sidecars for *.global hosts should go to egress gateway
    # service
    - match:
      - gateways:
        - mesh
      route:
      - destination:
          host: istio-egressgateway.istio-system.svc.cluster.local
          port:
            number: 80
        weight: 100
    # Add the following sub rule for each cluster to bridge
    # assuming that the clusters have *.clusterX.global for DNS suffix
    - match:        
      - gateways:
        - istio-egressgateway
        authority:
          regex: ".*?[.]cluster1[.]global"
      route:
      - destination:
          host: "*.cluster1.global"
        weight: 100
    - match:        
      - gateways:
        - istio-egressgateway
        authority:
          regex: '.*?[.]cluster2[.]global'
      route:
      - destination:
          host: "*.cluster2.global"
        weight: 100
